--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.3",
     "expo": "^32.0.0",
+    "firebase": "^5.10.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.9.1"
